--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+:root {
+	--black: #150605;
+	--red: #ea453c;
+	--pink: #f47b6e;
+	--light-blue: #effbfe;
+	--blue: #4974da;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+	font-family: "Oswald", sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wide {
+	grid-column: span 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tall {
+	grid-row: span 2;
 }
 
-.App-link {
-  color: #61dafb;
+.big {
+	grid-column: span 2;
+	grid-row: span 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: var(--pink);
+	color: var(--light-blue);
+	padding: 0 10px;
+	-webkit-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+	-moz-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+	box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+}
+
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: var(--light-blue);
+}
+
+a:hover {
+	color: var(--light-blue);
+}
+
+a:active {
+	color: var(--light-blue);
 }
