--- a/src/components/Payment/Payment.module.css
+++ b/src/components/Payment/Payment.module.css
@@ -1,10 +1,3 @@
-.payForm {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 15px;
-}
-
 .separator {
 	display: flex;
 	align-items: center;
@@ -29,35 +22,48 @@
 	margin-left: 0.25em;
 }
 
-.payHr {
+.appleBtn {
+	height: 40px;
 	width: 50%;
-	position: relative;
-	margin: 0 auto;
+	background-color: var(--black);
+	color: #fff;
+	border: none;
+	border-radius: 10px;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.appleBtn:hover,
+.appleBtn:focus {
+	background-color: #2c2c2c;
 }
 
 .container {
 	display: flex;
 	justify-content: center;
+	padding: 10px 0;
+	width: 350px;
 	margin-bottom: 10px;
 }
 
 .inputContainer {
 	display: flex;
 	flex-direction: column;
-	width: 40%;
 	margin-bottom: 10px;
 }
 
 .inputContainer input {
-	height: 30px;
+	border-radius: 25px;
+	height: 1.2rem;
+	padding: 5px;
+	border: 1px solid var(--black);
 }
 
-.appleBtn {
-	width: 40%;
-	height: 40px;
-	background-color: var(--black);
-	color: #fff;
-	border: none;
-	border-radius: 10px;
-	font-size: 18px;
+.flex {
+	display: flex;
+	justify-content: space-between;
+}
+
+.flex input {
+	width: 100%;
 }
